# crknob

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  crknob.code-workspace
.github/workflows/: ci.yml  cmake-msvc.yml  cmake.yml
src/: main.c  main.cc  patch.cc  patch.cpp  temp.cc
