cmake_minimum_required(VERSION 3.20)
project(crknob)
add_subdirectory(${PROJECT_SOURCE_DIR}/third_party/minhook)
add_library(${PROJECT_NAME} SHARED src/main.c)
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
target_link_libraries(${PROJECT_NAME} kernel32.lib psapi.lib)
if(MSVC)
  target_link_libraries(${PROJECT_NAME} libvcruntime.lib)
endif()
target_link_libraries(${PROJECT_NAME} minhook)
target_link_options(${PROJECT_NAME} PUBLIC -static -s)
target_compile_options(${PROJECT_NAME} PUBLIC -Wall)
