cmake_minimum_required(VERSION 3.20)
project(crknob)
if(WITH_VC_LTL AND MSVC)
  execute_process(COMMAND curl -L --output vc-ltl.7z https://github.com/Chuyu-Team/VC-LTL5/releases/download/v5.0.1-Beta6/VC-LTL-5.0.1-Beta6-Binary.7z)
  execute_process(COMMAND curl -L --output 7za.exe https://raw.githubusercontent.com/develar/7zip-bin/master/win/x64/7za.exe)
  execute_process(COMMAND 7za x -ovc-ltl vc-ltl.7z)
  include("vc-ltl/VC-LTL helper for cmake.cmake")
endif()
add_subdirectory(${PROJECT_SOURCE_DIR}/third_party/minhook)
add_library(${PROJECT_NAME} SHARED src/main.cc)
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
target_link_libraries(${PROJECT_NAME} kernel32.lib psapi.lib)
target_link_libraries(${PROJECT_NAME} minhook)
if(NOT MSVC)
  target_link_options(${PROJECT_NAME} PUBLIC -static -s)
endif()
target_compile_options(${PROJECT_NAME} PUBLIC -Wall)
