cmake_minimum_required(VERSION 3.20)
project(crknob)
# set(CMAKE_BUILD_TYPE MinSizeRel)
# set(CMAKE_POLICY_DEFAULT_CMP0069 NEW)
# set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
add_subdirectory(${PROJECT_SOURCE_DIR}/third_party/minhook)
add_library(${PROJECT_NAME} SHARED src/main.cc)
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
target_link_libraries(${PROJECT_NAME} minhook)
# target_link_options(${PROJECT_NAME} PUBLIC -static -s)
# target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Wextra)
